--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -3,6 +3,7 @@
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11717491.md#1" target="_blank">紧凑型SUV——2020马自达CX-30</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11717491.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191212-Chi-Jin-Mazda-CX-30-01-150x120.jpg" align ="left"></a>Mazda CX-30是马自达2019年在日内瓦车展推出的一款全新紧凑型SUV。基于第四代马自达3车型打造，介于CX-3和CX-5之间的一款车型，并且延续了马自达KODO的设计。
 
 CX-30前脸的造型依旧可以看到新一代马自达3身上的影子，都是采用马自达家族式的混动设计，但是细细端详在视觉上，又显得比马3扁一点。进.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 1:47 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11717402.md#1" target="_blank">如何预防肝癌？ 从定期健检和饮食习惯下手</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11717402.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/7cf157c301561d11526829ce476ae2c9-150x120.jpg" align ="left"></a>为让民众了解导致肝脏不健康的因素，纽约长老会下城医院的“福安康宁”华人社区保健计划10日在纽约中华公所举办“预防乙型肝炎、丙型肝炎和肝癌”健康硏讨会，注册护士汪敏玲为华埠耆老们解说预防肝炎的健康知识。亨特学院营养学系副教授叶明津博士分享，健康饮食也是预防肝癌的重要环节。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 1:47 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713568.md#1" target="_blank">【C2食光-节气料理】牛奶炖肉菜 暖心过小雪</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713568.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1ede7f05d2efd76b80fd2a51d81d6998-150x120.jpg" align ="left"></a>进入冬天的第二个节气，天气渐冷。宜早睡晚起，多晒太阳温补身体。小雪建议食材 ― 牛奶、起司、花生、大豆、胡萝卜、芹菜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 11:25 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716296.md#1" target="_blank">【美食天堂】满州花椰菜～印度著名酥脆料理</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716296.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Gobi-1-150x120.jpeg" align ="left"></a>印度最受欢迎的中餐之一“满洲花椰菜”。 这道菜在满洲和中国都找不到，但是在印度的大街小巷都看得到；现在还受欢迎到，在美国的各个印度中餐厅里都找得到他的踪影。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 11:18 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716519.md#1" target="_blank">出现3症状 小心卵巢早衰 中医师教你保养卵巢</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716519.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/premature-ovarian-failure0-1210-150x120.jpg" align ="left"></a>因工作与生活上的压力，出现卵巢功早衰的妇女越来越多。卵巢早衰会导致停经、不孕，身体也会提早老化。在日常生活中，可通过饮食、骨盆运动及穴道按摩来保养卵巢，不让它提早衰老。出现这些症状，小心是卵巢早衰。如果35岁以前就出现持续闭经现象，须就医检查是否为卵巢功能早衰。那么，平时应该怎样保养卵巢呢？保养卵巢的四大方法：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 10:34 AM			</td></tr>
@@ -34,6 +35,5 @@ CX-30前脸的造型依旧可以看到新一代马自达3身上的影子，都是采用马自达家族式的混动设
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712833.md#1" target="_blank">ICCJ Gala 意大利之夜</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712833.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2019_ICCJ_Gala_-0773-150x120.jpg" align ="left"></a>这个一年一度的奢华派对，旨在推广“意大利制造”之美。包括意大利驻日本大使Giorgio Starace和许多代表意大利的知名公司的高管都穿着意大利风格的华丽服饰出席了派对。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 3:43 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712411.md#1" target="_blank">神力女超人即将回归大银幕 预告片抢先看</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712411.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1192734749-150x120.jpg" align ="left"></a>继2017年的卖座电影《神力女超人》（Wonder Woman，或译《神奇女侠》）之后，另一部改编自DC漫画、同样以神力女超人为主题的超级英雄电影将于明年上映。而它的预告片已经公开，可以让影迷们先睹为快。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 1:52 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711671.md#1" target="_blank">【胡乃文开讲】闪到腰超痛！紧急时刻1招立即缓解</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711671.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/twist-waist-pain2-1209-150x120.jpg" align ="left"></a>你知道吗？大多数人会闪到腰，常常是因为拿东西的姿势不对。例如：有的人拿东西时，不是先蹲下再拿起来，而是弯着腰拿起来，这就容易闪到腰。平常睡姿或工作时坐姿不对，也可能造成闪腰问题。闪腰在中医学上这都是可以治的。如果是急性闪腰怎么办？教你一个最简单的急救穴道“扭伤穴”。扭伤穴其实就是手三里穴，它治疗扭伤很有效。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 5:03 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11711696.md#1" target="_blank">房子没有卖相 行家有啥高招？</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11711696.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_1711217542-600x400-1-150x120.jpg" align ="left"></a>买房固然是一件费时、费力、费脑筋的事，卖房其实也不容易，尤其是在市场不好的时候。这时，可以参考一下行家的做法。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 4:02 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008_2.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/nexmjc248/djy/blob/master/gb/news2008.md#1<br><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nexmjc248/djy/blob/master/gb/news2008.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2008.htm">http://www.epochtimes.com/gb/news2008.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
